# stridze-tools

./: .gitignore  Dockerfile  README.md  Stridze.py  app.py  docker-compose.yaml  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.streamlit/: config.toml
data/interim/: vdot-to-race-paces-coefficients.csv  vdot-to-training-paces-coefficients.csv
db/: __init__.py  controllers.py
db/models/: __init__.py  activity.py  gpx_point.py  lap.py  record.py  tcx_lap.py  user.py
db/schemas/: activity.py  gpx_point.py  lap.py  record.py  tcx_lap.py  trackpoint.py  user.py
notebooks/: 01-GAP model.ipynb  02-GPX Proximity.ipynb  03-Garmin import.ipynb  04-Track Detection.ipynb  06-VDOT pred.ipynb  07-Base Athle.ipynb  08-Strava stats.ipynb  09-Cross.ipynb  GAP.ipynb  World Athletics.ipynb  exploration.ipynb  extract_data.ipynb  test.ipynb
pages/: 1_Race Pace.py  2_GPX_Analyzer.py  2_VMA Paces.py  3_VDOT Calculator.py  5_GPX_Analyzer.py
src/: utils.py  vdot.py
src/data/: make_dataset.py  sync_dataset.py  vdot-coefficients.py
src/db/: __init__.py
src/db/models/: gpx_point.py  trackpoint.py
src/db/schemas/: activity.py
src/pages/: 1_Race Pace.py  2_VMA Paces.py  4_Calendar.py
stridze/: Dashboard.py  strava.py  utils.py  vdot.py
stridze/cli/: main.py
stridze/data/: garmin.py  make_dataset.py  sync_dataset.py  vdot-coefficients.py
stridze/db/: __init__.py  controllers.py  models.py
stridze/db/models/: __init__.py  activity.py  record.py  strava.py  user.py
stridze/db/schemas/: activity.py  lap.py  record.py  strava.py  tcx_lap.py  user.py
stridze/lib/sweat/: strava.py
stridze/models/: treadmill_incline.joblib  treadmill_incline.json
stridze/pages/: 1_Race Pace.py  2_VMA Paces.py  3_VDOT Calculator.py  4_GPX_Analyzer.py  5_Calendar.py  5_Treadmill Pace.py  6_IAAF.py  6_Strava.py  7_Calendar.py
supabase/: config.toml
supabase/functions/hello-world/: index.ts
