[tool.poetry]
name = "stridze-tools"
version = "0.1.0"
description = ""
authors = ["Julien Roullé <ju.roulle@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
streamlit = "^1.22.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
gpxpy = "^1.5.0"
plotly = "^5.14.1"
geopy = "^2.3.0"
srtm-py = "^0.3.7"
scipy = "^1.10.1"
garminconnect = "^0.1.55"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
xgboost = "^1.7.5"
python-tcxparser = "^2.3.0"
fitdecode = "^0.10.0"
mysql-connector-python = "^8.0.33"
psycopg2-binary = "^2.9.7"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
sqlmodel = "^0.0.8"
python-dotenv = "^1.0.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
isort = "^5.12.0"
black = "^23.9.1"
ruff = "^0.0.289"

[tool.isort]
profile = "black"
py_version = 311
multi_line_output = 3

[tool.black]
line-length = 88
target_version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"