[tool.poetry]
name = "stridze-tools"
version = "0.1.0"
description = ""
authors = ["Julien Roullé <ju.roulle@gmail.com>"]
readme = "README.md"
packages = [
    { include = "stridze" }
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
streamlit = "^1.22.0"
numpy = "^1.24.3"
gpxpy = "^1.5.0"
plotly = "^5.14.1"
geopy = "^2.3.0"
srtm-py = "^0.3.7"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
xgboost = "^1.7.5"
python-tcxparser = "^2.3.0"
fitdecode = "^0.10.0"
mysql-connector-python = "^8.0.33"
psycopg2-binary = "^2.9.7"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
seaborn = "^0.12.2"
typer = {extras = ["all"], version = "^0.9.0"}
garminconnect = "^0.2.7"
arrow = "^1.3.0"
httpx = "^0.25.0"
sqlmodel = "^0.0.8"
sweat = "^0.25.0"
bokeh = "2.4.3"
boto3 = "^1.28.59"
ratelimit = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
isort = "^5.12.0"
black = "^23.9.1"
ruff = "^0.0.289"

[tool.isort]
profile = "black"
py_version = 311
multi_line_output = 3

[tool.black]
line-length = 88
target_version = ["py311"]

[tool.poetry.scripts]
stridze = "stridze.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"