[tool.poetry]
name = "stridze-tools"
version = "0.1.0"
description = ""
authors = ["Julien Roullé <ju.roulle@gmail.com>"]
readme = "README.md"
packages = [
    { include = "stridze" }
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
gpxpy = "^1.5.0"
geopy = "^2.3.0"
srtm-py = "^0.3.7"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
python-tcxparser = "^2.3.0"
fitdecode = "^0.10.0"
psycopg2-binary = "^2.9.7"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
seaborn = "^0.12.2"
typer = {extras = ["all"], version = "^0.9.0"}
arrow = "^1.3.0"
httpx = "^0.25.0"
ratelimit = "^2.2.1"
uvicorn = "^0.23.2"
streamlit = "^1.28.1"
kaleido = "0.2.1"
garminconnect = "^0.2.9"
pycaret = {extras = ["all"], version = "^3.2.0"}
mlflow = "^2.8.1"
bokeh = "^3.3.1"
plotly = "^5.18.0"
sqlmodel = "^0.0.14"
sweat = "^0.25.0"
sqladmin = "^0.16.0"
extra-streamlit-components = "^0.1.60"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
isort = "^5.12.0"
black = "^23.9.1"
ruff = "^0.1.2"

[tool.isort]
profile = "black"
py_version = 311
multi_line_output = 3

[tool.black]
line-length = 88
target_version = ["py311"]

[tool.poetry.scripts]
stridze = "stridze.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"